corrección de errores

--- a/Proyecto web/formulario2.html
+++ b/Proyecto web/formulario2.html
@@ -33,7 +33,7 @@
   </nav>
 
   <div class="caja"> 
-  <form id="formuralito">
+  <form id="formuralito" class="forma">
     <div class="form">
     <h1>Contactanos</h1>
     <div class="grupo">
