se linkearon las nuevas paginas
se corrigió el texto, se linkearon los nuevos html y se corrigió un error de cajas

--- a/Proyecto web/DiasDeAvance.html
+++ b/Proyecto web/DiasDeAvance.html
@@ -57,6 +57,12 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="file:///C:/Users/hp/Desktop/Proyecto%20web/Galeria.html">Lore</a>
+              <li class="nav-item">
+                <a class="nav-link" href="file:///C:/Users/hp/Desktop/Proyecto%20web/formulario2.html">Contato</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="file:///C:/Users/hp/Desktop/Proyecto%20web/formulario 1.html">Tu noticia</a>
+              </li>
             </li>
           </ul>
         </div>
