--- a/Proyecto web/formulario 1.html
+++ b/Proyecto web/formulario 1.html
@@ -28,6 +28,12 @@
         <li class="nav-item">
           <a class="nav-link" href="file:///C:/Users/hp/Desktop/Proyecto%20web/Galeria.html">Lore</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="file:///C:/Users/hp/Desktop/Proyecto%20web/formulario2.html">Contato</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="file:///C:/Users/hp/Desktop/Proyecto%20web/formulario 1.html">Tu noticia</a>
+        </li>
       </ul>
     </div>
   </nav>
